<resources>
    <string name="app_name">Lifeline</string>

    <!-- HINTS -->
    <string name="hint_Name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_Password">Password</string>
    <string name="hint_confirm">Confirm Password</string>
    <string name="login_header">LOGIN</string>
    <string name="sign_up_header">SIGN UP</string>
    <string name="back_to_login">Have an account? Log in</string>

    <string name="hint_dob">Date of Birth</string>
    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_bloodtype">Blood type</string>
    <string name="hint_allergies">Allergies</string>
    <string name="hint_medication">Medications</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_message">Message</string>
    <string name="hint_contact_name">Name</string>
    <string name="hint_contact_number">Phone Number</string>
    <string name="contact_limit">You can have a maximum of 3 emergency contacts</string>
    <string name="btn_save_details">Save Details</string>
    <string name="btn_save_contact">Save Contact</string>
    <string name="btn_save_message">Save Message</string>


    <!-- MENU -->
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>

    <!-- MAIN -->
    <string name="info_name">John Doe</string>
    <string name="info_title_height">Height (cm)</string>
    <string name="info_title_age">Age</string>
    <string name="info_title_weight">Weight (kgs)</string>
    <string name="info_title_bloodType">Blood Type</string>
    <string name="info_title_allergies">Known Allergies</string>
    <string name="info_title_medication">Current Medications</string>
    <string name="info_title_notes">Additional Information</string>

    <string name="info_height">0</string>
    <string name="info_age">0</string>
    <string name="info_weight">0</string>
    <string name="info_bloodtype">AB +</string>
    <string name="info_none">None</string>
    <string name="send_emergency_message">Send S.O.S</string>

    <!-- SETTINGS -->
    <string name="setting_profile">Edit medical info</string>
    <string name="setting_contact">Set emergency contact</string>
    <string name="setting_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
