<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/userProfilePhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_person_imageview_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userProfilePhoto"
                android:layout_marginTop="8dp"
                android:text="@string/info_name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/userProfilePhoto"
                app:layout_constraintStart_toStartOf="@+id/userProfilePhoto"
                app:layout_constraintTop_toBottomOf="@+id/userProfilePhoto" />

            <TextView
                android:id="@+id/heightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="32dp"
                android:layout_toEndOf="@+id/ageTitle"
                android:text="@string/info_title_height"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/ageTitle"
                app:layout_constraintEnd_toStartOf="@+id/ageTitle" />

            <TextView
                android:id="@+id/ageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:text="@string/info_title_age"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/userProfilePhoto"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/userProfilePhoto"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/weightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:layout_marginStart="32dp"
                android:layout_toEndOf="@+id/heightTitle"
                android:text="@string/info_title_weight"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/ageTitle"
                app:layout_constraintStart_toEndOf="@+id/ageTitle" />

            <TextView
                android:id="@+id/userHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_height"
                android:textAlignment="center"
                android:textColor="@color/text_semi_black"
                app:layout_constraintEnd_toEndOf="@+id/heightTitle"
                app:layout_constraintStart_toStartOf="@+id/heightTitle"
                app:layout_constraintTop_toBottomOf="@+id/heightTitle" />

            <TextView
                android:id="@+id/userAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_age"
                android:textAlignment="center"
                android:textColor="@color/text_semi_black"
                app:layout_constraintEnd_toEndOf="@+id/ageTitle"
                app:layout_constraintStart_toStartOf="@+id/ageTitle"
                app:layout_constraintTop_toBottomOf="@+id/ageTitle" />

            <TextView
                android:id="@+id/userWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_weight"
                android:textAlignment="center"
                android:textColor="@color/text_semi_black"
                app:layout_constraintEnd_toEndOf="@+id/weightTitle"
                app:layout_constraintStart_toStartOf="@+id/weightTitle"
                app:layout_constraintTop_toBottomOf="@+id/weightTitle" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/info_title_bloodType"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userAge" />

            <TextView
                android:id="@+id/userBloodType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/text_semi_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_title_allergies"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userBloodType" />

            <TextView
                android:id="@+id/userAllergies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_semi_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_title_medication"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userAllergies" />

            <TextView
                android:id="@+id/userMedications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_semi_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_title_notes"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userMedications" />

            <TextView
                android:id="@+id/userNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_semi_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSendEmergency"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="Send Emergency Message"
        android:textStyle="bold"
        android:fontFamily="@font/maven_pro"
        android:textSize="18sp"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>